"10px weiß"-bugfix
Die 10 Pixel waren übrigens die Scrollbar ;)

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html {
 	height: 100%;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 body{
 	color: #333;
